apps/fun/chex-mix-timer/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chex-mix-timer-backend
  namespace: chex-mix-timer
  labels:
    app: chex-mix-timer-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chex-mix-timer-backend
  template:
    metadata:
      labels:
        app: chex-mix-timer-backend
    spec:
      containers:
        - name: chex-mix-timer-backend
          # Flux Image Automation will maintain this tag via setter below
          image: ghcr.io/chad-russell/chex-mix-timer-backend:v0.0.8 # {"$imagepolicy": "flux-system:chex-mix-timer-backend"}
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 100m
              memory: 128Mi
          livenessProbe:
            httpGet:
              path: /api/vapidPublicKey
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /api/vapidPublicKey
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: chex-mix-timer-backend
  namespace: chex-mix-timer
  labels:
    app: chex-mix-timer-backend
spec:
  selector:
    app: chex-mix-timer-backend
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
