apps/fun/chex-mix-timer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chex-mix-timer
  namespace: chex-mix-timer
  labels:
    app: chex-mix-timer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chex-mix-timer
  template:
    metadata:
      labels:
        app: chex-mix-timer
    spec:
      containers:
        - name: chex-mix-timer
          # Flux Image Automation will maintain this tag via setter below
          image: ghcr.io/chad-russell/chex-mix-timer:v0.0.3 # {"$imagepolicy": "flux-system:chex-mix-timer"}
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "200m"
          livenessProbe:
            httpGet:
              path: /
              port: 8080
              httpHeaders:
                - name: Host
                  value: chex-mix-timer.crussell.io
            initialDelaySeconds: 15
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: 8080
              httpHeaders:
                - name: Host
                  value: chex-mix-timer.crussell.io
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: chex-mix-timer
  namespace: chex-mix-timer
  labels:
    app: chex-mix-timer
spec:
  selector:
    app: chex-mix-timer
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
