apps/fun/chex-mix-timer/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chex-mix-timer-frontend
  namespace: chex-mix-timer
  labels:
    app: chex-mix-timer-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chex-mix-timer-frontend
  template:
    metadata:
      labels:
        app: chex-mix-timer-frontend
    spec:
      containers:
        - name: chex-mix-timer-frontend
          # Flux Image Automation will maintain this tag via setter below
          image: ghcr.io/chad-russell/chex-mix-timer-frontend:v0.0.8 # {"$imagepolicy": "flux-system:chex-mix-timer-frontend"}
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 50m
              memory: 64Mi
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
              readOnly: true
          livenessProbe:
            httpGet:
              path: /
              port: 80
              httpHeaders:
                - name: Host
                  value: chex-mix-timer.crussell.io
            initialDelaySeconds: 15
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: 80
              httpHeaders:
                - name: Host
                  value: chex-mix-timer.crussell.io
            initialDelaySeconds: 5
            periodSeconds: 10
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
---
apiVersion: v1
kind: Service
metadata:
  name: chex-mix-timer-frontend
  namespace: chex-mix-timer
  labels:
    app: chex-mix-timer-frontend
spec:
  selector:
    app: chex-mix-timer-frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
